# my_corp_parser

./: Cargo.toml  README.md  grammar.pest
src/: lib.rs  main.rs
tests/: test_email.txt  test_user.txt  tests.rs
